--- a/app/src/main/res/layout/activity_daftar_user.xml
+++ b/app/src/main/res/layout/activity_daftar_user.xml
@@ -4,17 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".DaftarUserActivity">
-    <Button
-        android:id="@+id/btn_tambah"
-        android:text="TAMBAH USER"
-        android:layout_alignParentTop="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+
     <ListView
         android:id="@+id/lv_user"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_tambah"
+        android:layout_gravity="end|bottom"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_tambah"></ListView>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/ic_add"/>
 
 </RelativeLayout>
