--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#557fcf</color>
-    <color name="pink">#FF4081</color>
+    <color name="colorPrimary">#0e81d1</color>
+    <color name="colorPrimaryDark">#076bb0</color>
+    <color name="pink">#D81B60</color>
     <color name="black_overlay">#66000000</color>
 
     <!-- Colors for arrow buttons -->
