--- a/app/src/main/res/layout/activity_daftar_user.xml
+++ b/app/src/main/res/layout/activity_daftar_user.xml
@@ -7,10 +7,21 @@
     android:padding="16dp"
     tools:context=".DaftarUserActivity">
 
-    <ListView
-        android:id="@+id/lv_user"
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/lv_user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </ListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btn_tambah"
